Fixes navigation toggle overlap in FF browser

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -72,7 +72,7 @@ header.bk-header {
   bottom: 0px;
   z-index: 9999;
   .bk-header {
-    background-color: hsla(hue(@color-swatch7), saturation(@color-swatch7), lightness(lighten(@color-swatch7,10%)), 0.6); 
+    background-color: hsla(hue(@color-swatch7), saturation(@color-swatch7), lightness(lighten(@color-swatch7,10%)), 0.6);
     position: absolute;
   }
 }
@@ -84,15 +84,16 @@ header.bk-header, .widget.feature.bk-tpl-hidden + .header-wrapper header.bk-head
   bottom: 0px;
   background-color: @color-swatch7;
   @media @tablet {
-    box-shadow: 0 -3px 3px hsla(hue(@color-swatch7), saturation(@color-swatch7), lightness(lighten(@color-swatch7,10%)), 0.2); 
+    box-shadow: 0 -3px 3px hsla(hue(@color-swatch7), saturation(@color-swatch7), lightness(lighten(@color-swatch7,10%)), 0.2);
   }
 }
 
 // Company Name
-.widget.companyname { 
+.widget.companyname {
     width: 20%;
     @media @tablet {
       width: 80%;
+      margin-right: 28px;
     }
 }
 
@@ -195,7 +196,7 @@ footer.bk-footerp {
   &:after {
 	  display: none;
   }
-}     
+}
 
 .widget.extendednavigation ul li.folder:hover {
   background-color: @color-swatch7;
@@ -305,7 +306,7 @@ footer.bk-footerp {
   text-shadow: 0px 1px 1px rgba(0,0,0,0.1);
 }
 
-.widget.feature button:hover 
+.widget.feature button:hover
 {
   background-color: @font-swatch7-background-color-hover;
   cursor: pointer;
@@ -345,7 +346,7 @@ footer.bk-footerp {
   text-shadow: 0px 1px 1px rgba(0,0,0,0.1);
 }
 
-.widget.button button:hover 
+.widget.button button:hover
 {
   background-color: @font-swatch7-background-color-hover;
   cursor: pointer;
@@ -473,11 +474,11 @@ hr.line.align-right {
    =============================== */
 
 .widget.clicktocall {
-   
+
 }
 
 .widget.clicktocall a {
-  
+
   font-family: @font-swatch5-font-family;
   font-weight:@font-swatch5-font-weight;
   color: @font-swatch5-color;
@@ -648,7 +649,7 @@ hr.line.align-right {
     text-decoration: none;
     text-shadow: 0px 1px 1px rgba(0,0,0,0.1);
 }
-  
+
 .widget.contactform fieldset button.btn:hover {
   background-color: @font-swatch7-background-color-hover;
   cursor: pointer;
@@ -716,7 +717,7 @@ hr.line.align-right {
    =============================== */
 
 .widget.tweet {
-   padding: 0px; 
+   padding: 0px;
 }
 
 .widget.tweet .tweet {
@@ -763,7 +764,7 @@ hr.line.align-right {
 }
 
 .widget.socialicons a, .widget.profile .bk-profile-socialicons a {
-    text-decoration: none;  
+    text-decoration: none;
     text-indent: 9999px;
     overflow: hidden;
     white-space: nowrap;
@@ -787,7 +788,7 @@ hr.line.align-right {
     background-position: center;
 }
 
-.widget.socialicons span a:hover, .widget.profile 
+.widget.socialicons span a:hover, .widget.profile
 .bk-profile-socialicons span a:hover {
     background-color: @font-swatch7-background-color-hover;
 }
@@ -1344,7 +1345,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
                 max-width: 100%!important;
             }
         }
-        @media (max-width: 360px) { 
+        @media (max-width: 360px) {
             max-width: 100%;
         }
     }
@@ -1406,7 +1407,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
                 outline: none;
             }
         }
-    }   
+    }
     // Table
     table {
         margin: 20px 0 30px;
@@ -1506,7 +1507,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
             background-color: @color-swatch3;
         }
     }
-    // 
+    //
     .js-shipping-opts {
         border-bottom: 1px solid darken(@color-swatch1,10%);
         padding-bottom: 20px;
@@ -1841,7 +1842,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
     margin-bottom: 10px;
 }
 
-// Price 
+// Price
 .standard-price {
     color: @font-swatch4-color;
     font-family: @font-swatch4-font-family;
@@ -1872,7 +1873,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
 
   .canvas {
     width: 100%;
-  } 
+  }
 
   .main {
     padding: 40px 0px;
@@ -1897,7 +1898,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
         &:last-child {
           border-bottom: 0;
         }
-    }   
+    }
 
     .widget .extendednavigation li {
         width: 100%;
@@ -2034,7 +2035,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
   /* FEATURE */
 
   .widget.feature .feature-bgimg {
-    height: 500px; 
+    height: 500px;
    }
 
   .widget.feature .content {
@@ -2059,7 +2060,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
   .widget.clicktocall {
     padding: 15px 0;
   }
-  
+
   .widget.clicktocall a {
     background-image: image('/images/ic-call.svg');
     background-position: 13px center;
@@ -2079,7 +2080,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
     text-decoration: none;
     text-shadow: 0px 1px 1px rgba(0,0,0,0.1);
   }
-    
+
   .widget.clicktocall a:hover {
     background-image: image('/images/ic-call.svg');
     background-position: 13px center;
@@ -2087,7 +2088,7 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
     background-size: 7px;
     cursor: pointer;
   }
-  
+
   .widget.clicktocall a:active {
     box-shadow: inset 0 0 6px rgba(255,255,255,0.9);
   }
